infra/bitwarden/templates/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-ingress
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`bitwarden.durp.info`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: bitwarden
      port: 80
  tls:
    secretName: bitwarden-tls

---

kind: Service
apiVersion: v1
metadata:
  name: bitwarden-external-dns
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bitwarden.durp.info
spec:
  type: ExternalName
  externalName: durp.info
